@@ -1,26 +1,8 @@
 plugins {
-    id 'application'
+    id 'airbyte-python'
     id 'airbyte-docker'
-    id 'airbyte-integration-test-java'
 }
 
-application {
-    mainClass = 'io.airbyte.integrations.destination.meilisearch.MeiliSearchDestination'
-    // Needed for JDK17
-    applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0','--add-opens', 'java.base/java.lang=ALL-UNNAMED']
-}
-
-dependencies {
-    implementation project(':airbyte-db:db-lib')
-    implementation project(':airbyte-integrations:bases:base-java')
-    implementation project(':airbyte-protocol:protocol-models')
-
-    implementation 'com.meilisearch.sdk:meilisearch-java:0.6.0'
-
-    integrationTestJavaImplementation project(':airbyte-integrations:bases:standard-destination-test')
-    integrationTestJavaImplementation project(':airbyte-integrations:connectors:destination-meilisearch')
-
-    integrationTestJavaImplementation libs.connectors.testcontainers
-
-    implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
+airbytePython {
+    moduleDirectory 'destination_meilisearch'
 }
